# conpy

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  azure-pipelines.yml  environment.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: build-docs.yml  unit-tests.yml
conpy/: __init__.py  connectivity.py  forward.py  stats.py  utils.py  viz.py
conpy/tests/: test_connectivity.py  test_forward.py  test_utils.py
doc/: Makefile  api.rst  conf.py  index.rst
doc/_templates/: class.rst
examples/: plot_coherence_ext_ref.py  plot_recipsiicos.py  plot_simulation.py
paper/: conpy.bib  conpy.tex  frontiersSCNS.cls  frontiersinSCNS_ENG_HUMS.bst  latexmkrc
paper/code_snippets/: connectivity.py  csd.py  forward.py  power.py  pruning.py  visualization.py
scripts/: 00_fetch_data.py  01_anatomy.py  02_filter.py  03_ica.py  04_epochs.py  05_csd.py  06_fsaverage_src.py  07_forward.py  08_select_vertices.py  09_power.py  10_connectivity.py  11_grand_average_power.py  12_connectivity_stats.py  check_system.py  config.py  dodo.py  figure_code_summary.py  figure_connectivity.py  figure_csd.py  figure_forward.py  figure_power.py  fnames.py
scripts/sbatch/: 01_anatomy.sh  02_filter.sh  03_ica.sh  04_epochs.sh  05_csd.sh  06_fsaverage_src.sh  07_forward.sh  08_select_vertices.sh  09_power.sh  10_connectivity.sh  11_grand_average_power.sh  12_connectivity_stats.sh
tests/: test_connectivity.py  test_forward.py  test_stats.py  test_utils.py
