[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "conpy"
authors = [
    {name = "Marijn van Vliet", email = "w.m.vanvliet@gmail.com"},
]
description = "Functions and classes for performing DICS connectivity analysis on MEG data"
requires-python = ">=3.9"
keywords = ["rsa", "meg", "eeg", "neuroimaging", "mne-python"]
license = {text = "BSD-3-Clause"}
classifiers = [
	"Intended Audience :: Science/Research",
	"Intended Audience :: Developers",
	"License :: OSI Approved",
	"Programming Language :: Python",
	"Topic :: Software Development",
	"Topic :: Scientific/Engineering",
	"Operating System :: Microsoft :: Windows",
	"Operating System :: POSIX",
	"Operating System :: Unix",
	"Operating System :: MacOS",
]
dependencies = ["mne", "h5io", "h5py", "seaborn", "tqdm"]
dynamic = ["version"]
readme = {content-type = "text/markdown", file = "README.md"}

[project.urls]
"Bug Tracker" = "https://github.com/aaltoimaginglanguage/conpy/issues/"
"Source Code" = "https://github.com/aaltoimaginglanguage/conpy"
"Homepage" = "https://users.aalto.fi/~vanvlm1/conpy/"

[tool.setuptools]
packages = ["conpy"]

[tool.setuptools.dynamic]
version = {attr = "conpy.__version__"}

[tool.pytest.ini_options]
addopts = """
    --showlocals --durations=20 --doctest-modules -ra --cov-report=term-missing
    --doctest-ignore-import-errors --junit-xml=junit-results.xml
    --ignore=doc --ignore=examples --ignore=tutorials --cov=conpy
"""
junit_family = "xunit2"

[tool.ruff]
exclude = ["__init__.py"]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "D", "W"]
ignore = ["D107", "D203", "D213", "D413"]
per-file-ignores = {"examples/*.py" = ["D205", "D400", "D415", "D212"], "__init__.py" = ["E402"]}

[tool.ruff.format]
quote-style = "double"
